2021-06-25  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* unicode-jp.c: changed the returned value of UCS2toJISnative(0)
	from 0x222F to 0 to indicate that it is invalid.

2021-04-17  Karl Berry  <karl@tug.org>

	* version.ac: now 1.3.11/dev since TL'21 is released.

2021-03-23  Karl Berry  <karl@tug.org>

	* TL'21.

2021-02-17  Karl Berry  <karl@tug.org>

	* version.ac: remove /dev for 1.3.9, for TL21.

2020-05-10  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* ptexenc.c: Fix a bug of end of line in input_line2().
	https://github.com/texjporg/tex-jp-build/issues/100

2020-04-10  Karl Berry  <karl@tug.org>

	* version.ac: now 1.3.9/dev since TL'19 is released.

2020-01-16  Karl Berry  <karl@freefriends.org>

	* version.ac (ptexenc_version): remove /dev (just 1.3.8) for TL'20.

2019-09-09  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* ptexenc.c: Fix a bug that size of buf was insufficient, when
	converting the file name from UTF-8 to the internal encoding.
	This bug could cause "Abort trap: 6".
	https://github.com/texjporg/tex-jp-build/issues/89
	* ptexenc.c: Avoid to collapse some invalid UTF-8 sequences into
	a "Japanese" character U+0027 (1-2-15 in JIS X 0213).
	https://github.com/texjporg/tex-jp-build/pull/90

2019-05-03  Karl Berry  <karl@tug.org>

	* version.ac: 1.3.8/dev since TL'19 is released.

2019-02-15  Akira Kakuto  <kakuto@w32tex.org>

	* ptexenc.c: Initialize a local variable.

2019-02-11  Karl Berry  <karl@tug.org>

	* version.ac: no /dev for TL'19.

2019-01-23  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* ptexenc.c, ptexenc/ptexenc.h: define enc_to_string() and
	get_internal_enc() as extern.

2018-06-14  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* ptexenc.c, ptexenc/ptexenc.h: remove sjisterminal (w32 only).

2018-06-09  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* ptexenc.c, ptexenc/ptexenc.h: Add new functions
	ptenc_from_utf8_string_to_internal_enc(),
	ptenc_from_internal_enc_string_to_utf8() and